tests/error_corpus/validation_errors/E531_media_filename_mismatch.cha
@UTF8
@Begin
@Languages:	eng
@Participants:	CHI Target_Child
@ID:	eng|corpus|CHI|||||Target_Child|||
@Media:	wrong-basename, audio
@Comment:	ERROR: @Media basename does not match this file's basename
*CHI:	hello .
@End
