tests/error_corpus/parse_errors/E320_languages_trailing_comma.cha
@UTF8
@Begin
@Languages:	eng, fra,
@Participants:	CHI Target_Child
@ID:	eng|corpus|CHI|||||Target_Child|||
*CHI:	hi .
@End
